Day 16 part 2 - solves examples, but not input :(